--- a/style.css
+++ b/style.css
@@ -44,11 +44,15 @@ h4 {
     margin-bottom: 0rem;
 }
 
+p {
+    font-size: 1rem;
+}
+
 .btn {
     color: var(--f2);
     background: var(--green);
-    border-radius: 2rem;
-    padding: 9px 16px;
+    border-radius: 2rem!important;
+    padding: 9px 16px!important;
     border: 2px solid transparent;
     font-weight: 500;
     text-align: center;
@@ -70,13 +74,14 @@ h4 {
     align-items: center;
     justify-content: space-between!important;
     background: transparent;
-    position: absolute;
+    position: absolute!important;
 }
 
 .navbar {
     box-shadow: none!important;
     width: 90%;
     margin: auto;
+    padding: 1rem 0;
 }
 
 .navbar-brand img {
@@ -447,9 +452,24 @@ h4 {
     position: relative;
 }
 
+.icons {
+    width: 55px;
+    height: 55px;
+    margin: 1rem;
+}
+
+.shape-outer:hover,
+.shape-inner:hover,
+.shape-inner:hover .small,
+.shape-inner:hover .icons {
+    background: var(--green);
+    color: white!important;
+    fill: var(--f2);
+}
+
 .shape-inner {
-    height: calc(195px + 4vw);
-    width: calc(195px + 4vw);
+    height: calc(230px + 4vw);
+    width: calc(230px + 4vw);
     margin: auto;
     border-radius: 1rem;
     position: absolute;
@@ -458,19 +478,22 @@ h4 {
     transform: translate(-50%, -50%);
     text-align: center;
     color: black;
-    padding: 1rem;
+    padding: 2rem 1rem;
+}
+
+.shape-inner h4 {
+    text-transform: uppercase;
+    margin: .5rem 0;
+}
+
+.shape-inner p {
+    font-size: 14px;
 }
 
 .trapezoid {
     -webkit-clip-path: polygon(0 18%, 100% 0, 100% 100%, 0% 100%);
     clip-path: polygon(0 18%, 100% 0, 100% 100%, 0% 100%);
     border-radius: 1rem;
-}
-
-.content-img {
-    width: 55px;
-    margin: 1rem;
-    margin-top: 2rem;
 }
 
 .small {
@@ -565,6 +588,7 @@ h4 {
 .tech {
     padding: 89px;
     text-align: center;
+    height: 100vh;
 }
 
 #tabs {
@@ -614,6 +638,468 @@ h4 {
     margin: 1rem;
 }
 
+.services-2 {
+    height: 1046px;
+    background: #F1FDFE 0% 0% no-repeat padding-box;
+    opacity: 1;
+    position: relative;
+}
+
+.services-2 .heading {
+    padding: 4rem 6rem;
+    margin: 2rem;
+    color: var(--green);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.services-2 .heading .right {
+    display: flex;
+    align-items: center;
+    width: 8%;
+    justify-content: space-between;
+}
+
+.services-2 .heading .right i {
+    font-size: 1.75rem;
+    color: #B6BEB9;
+}
+
+.services-2 .heading h1 {
+    font-size: 35px;
+    font-weight: bold;
+    color: #000;
+    margin: .75rem 0;
+}
+
+@media (max-width:991.98px) {
+    .padding {
+        padding: 1.5rem
+    }
+}
+
+@media (max-width:767.98px) {
+    .padding {
+        padding: 1rem
+    }
+}
+
+.padding {
+    padding: 5rem
+}
+
+.card {
+    display: flex;
+    width: 346px!important;
+    height: 500px!important;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #003030;
+    background-clip: border-box;
+    border-radius: 11px;
+    padding: 1rem;
+    box-shadow: 0px 3px 15px #00000029;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 1rem;
+}
+
+.items {
+    width: 100%;
+    margin: 0px auto;
+}
+
+.slick-slide {
+    margin: 10px;
+}
+
+.slick-list {
+    height: 570px;
+    padding: 30px!important;
+}
+
+.media iframe,
+.media-content {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border: 0;
+    border-radius: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-color: rgba(120, 120, 120, .1);
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center
+}
+
+.media-content:before {
+    content: '';
+    position: absolute;
+    height: 10%;
+    width: 90%;
+    left: 5%;
+    bottom: 0;
+    background: inherit;
+    background-position-y: 100%;
+    filter: blur(10px)
+}
+
+.circle .media-content:before {
+    width: 40%;
+    left: 30%
+}
+
+.profileimg {
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 11px !important;
+    border-top-right-radius: 11px
+}
+
+.card-title {
+    font-size: 19px;
+    font-weight: 200
+}
+
+.card h4 {
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    opacity: 1;
+    margin: .75rem 0;
+    font-weight: normal;
+}
+
+.card p {
+    letter-spacing: 0px;
+    color: #f2f2f2;
+    opacity: .8;
+    font-weight: 100;
+    font-size: 14px;
+    margin-bottom: 4rem;
+}
+
+.services-card {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    overflow: hidden;
+    position: relative;
+}
+
+.services-card .s-img {
+    position: absolute;
+    z-index: 0;
+    left: -2%;
+    height: 100%;
+}
+
+.services-card .small {
+    color: var(--green);
+    text-transform: uppercase;
+}
+
+.services-card .slick-slide {
+    background: #003030;
+}
+
+.projects {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 74px;
+    background: #000000;
+    color: #f2f2f2;
+}
+
+.project-0 h4 {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
+.project-0 h1 {
+    font-size: 1.5rem;
+    width: 100%;
+    margin: .5rem 0;
+}
+
+.line {
+    width: 1px;
+    height: 60px;
+    background: var(--b6);
+}
+
+.project-1 p {
+    padding: 1rem;
+    padding-top: 2rem;
+    font-size: .75rem;
+}
+
+.projects .btn {
+    padding: 9px 40px;
+}
+
+.col-md-5 {
+    width: 40%;
+}
+
+.cards-projects {
+    border: 1px solid #00A542;
+    padding: 4rem;
+}
+
+.cards-pro {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 1rem;
+}
+
+.cards-pro img {
+    width: 100%;
+}
+
+.middle .btn {
+    border-radius: 0rem;
+    padding: 9px;
+    width: 45px;
+    height: 45px;
+}
+
+.card1 {
+    position: relative;
+}
+
+.middle {
+    width: 310px;
+    height: 458px;
+    position: absolute;
+    top: 0%;
+    text-align: center;
+    background: rgba(0, 165, 66, .25);
+    opacity: 0;
+    cursor: pointer;
+}
+
+.middle .btnss {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.middle .btn.big {
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    width: 310px;
+}
+
+.middle .btn:hover,
+.middle .btn.big:hover {
+    background: #fff;
+    font-weight: bold;
+}
+
+.card1:hover .image {
+    opacity: 0.3;
+}
+
+.card1:hover .middle {
+    opacity: 1;
+}
+
+.news {
+    background: url(./images/pattern-5.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 165vh;
+    padding: 5rem 0;
+}
+
+.news .heading {
+    text-align: center;
+    margin: 5rem 0;
+}
+
+.news .news-cards {
+    margin: 3rem;
+}
+
+.news .news-cards h6 {
+    font-size: .8rem;
+    margin: .5rem;
+}
+
+.heading h1 {
+    font-size: 1.5rem;
+    margin: .25rem;
+    font-weight: 600;
+}
+
+.heading h4 {
+    font-size: 1.2rem;
+}
+
+.news .heading h4 {
+    color: #00A542;
+}
+
+.news h2 {
+    margin: .5rem;
+    font-size: 1.25rem;
+}
+
+.news p {
+    margin: 1rem .5rem;
+    font-size: 14px;
+}
+
+.news .small {
+    text-transform: uppercase;
+    color: black;
+}
+
+.small-img {
+    width: 80px;
+    height: 80px;
+    margin: 1rem .5rem;
+}
+
+.big-img {
+    width: 100%;
+}
+
+.big-card {
+    width: 86.5%;
+}
+
+.news1 {
+    display: flex;
+    align-items: inherit;
+    justify-content: space-around;
+    flex-direction: column;
+    text-align: left;
+    padding: 0.5rem;
+    background: #F8F8F8;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, .1);
+}
+
+.green,
+.green .small {
+    background: #003030;
+    color: var(--f2);
+}
+
+.darkgreen,
+.darkgreen .small {
+    background: #00A542;
+    color: #fff;
+}
+
+.news .row {
+    margin: auto 0rem;
+}
+
+.news .col-5,
+.news .col {
+    padding: 0rem;
+    width: 100%;
+}
+
+.testimonial {
+    height: 107vh;
+    background: url(./images/testimonial.png);
+    color: #fff;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 2rem 4rem;
+    text-align: center;
+}
+
+.testimonial .heading h4 {
+    font-size: 1.1rem;
+    font-weight: normal;
+    margin: 1rem 0;
+    margin-bottom: .5rem;
+}
+
+.testimonial .heading h1 {
+    font-size: 1.5rem;
+}
+
+.testimonial-1 {
+    background: #1A5858;
+    padding: 2rem 2.4rem;
+    width: 400px;
+    height: auto;
+    border-radius: 54px 0;
+    text-align: left;
+    margin: 1rem;
+    position: relative;
+}
+
+.testimonial-1 .lines {
+    width: 60px;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: .5rem 0;
+    margin-bottom: 1rem;
+}
+
+.testimonial-1 .lines .darkline {
+    width: 15px;
+    height: 7vh;
+    background: #00A542;
+}
+
+.testimonial-1 p {
+    padding: 1rem 0;
+    padding-bottom: 2rem;
+}
+
+.testimonial-1 .desc {
+    position: absolute;
+    left: 32%;
+    bottom: -30%;
+}
+
+.testimonial-1 .desc img {
+    width: 100px;
+    height: 100px;
+}
+
+.testimonial-1 .desc p {
+    text-align: center;
+}
+
+.test {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.client {
+    padding: 2rem;
+    height: 100vh;
+    text-align: center;
+}
+
 .footer {
     padding: 2rem;
 }
@@ -645,4 +1131,253 @@ h4 {
 
 .footer .media img {
     width: 40px;
+}
+
+.cards-projects,
+.news,
+.testimonial,
+.polygon {
+    display: none;
+}
+
+@media screen and (max-width: 1000px) {
+    h2 {
+        font-size: 22px;
+    }
+    .navbar {
+        width: auto;
+        padding: 0rem!important;
+    }
+    .navbar-brand {
+        width: 60%;
+    }
+    .navbar-brand img {
+        width: 100%;
+        margin: 1rem 0;
+    }
+    .navbar-toggler-icon {
+        margin: 0rem 1rem;
+        margin-top: 1rem;
+        margin-right: 1.2rem;
+    }
+    .navbar-toggler-icon i {
+        color: #00A542;
+    }
+    .navbar-nav {
+        padding: 1rem;
+    }
+    .navbar-nav li {
+        width: 100%;
+        padding: .5rem;
+    }
+    .navbar-collapse {
+        background: #fff;
+        width: 100%;
+        margin: 0rem;
+        padding: .5rem 1.5rem;
+        border: 1px dashed green;
+    }
+    .navbar-nav li {
+        width: 100%;
+        padding: .5rem 1rem;
+    }
+    .navbar-nav li a {
+        text-align: left;
+        font-size: 16px;
+        letter-spacing: 0px;
+        color: #111;
+        opacity: 1;
+    }
+    .navbar-nav .dropdown-menu {
+        position: static;
+        float: none;
+    }
+    .megamenu {
+        position: absolute;
+        width: auto;
+        padding: 1rem;
+        border: none;
+        box-shadow: 0px 3px 10px rgba(0, 165, 66, .25);
+        background: #f8f8f8;
+    }
+    .background .btn {
+        width: auto;
+    }
+    p,
+    .main p {
+        font-size: 16px;
+        width: 100%;
+    }
+    .main {
+        padding: 1rem 1.5rem;
+        top: 25%;
+        left: 0%;
+        transform: translate(0px, 0px);
+        text-align: left;
+    }
+    .main h1 {
+        font-size: 30px;
+    }
+    .main .buttons .btn {
+        padding: 5px 20px;
+        margin: 1rem;
+        font-size: 1rem;
+    }
+    .arrows {
+        display: none;
+    }
+    .about {
+        padding: 0;
+        flex-direction: column-reverse;
+    }
+    .about h4 {
+        font-size: 1.2rem;
+    }
+    .about .left,
+    .about .right {
+        width: 100%;
+    }
+    .about .right {
+        padding: 0rem;
+        display: none;
+    }
+    .about .left {
+        line-height: 30px;
+    }
+    .services {
+        padding: 1rem;
+        height: auto;
+    }
+    .services h4 {
+        font-size: initial;
+    }
+    .shape-outer {
+        height: calc(300px + 4vw);
+        width: calc(300px + 4vw);
+        margin: 10px 5px;
+    }
+    .shape-inner {
+        padding: 2rem 0;
+    }
+    .contact {
+        height: auto;
+    }
+    .contact .btn {
+        padding: .5rem 1.5rem;
+    }
+    .contact h4 {
+        margin: 1rem;
+        font-size: 1.3rem;
+    }
+    .contact p {
+        font-size: .9rem;
+    }
+    .contact .container-fluid {
+        padding-top: 0rem;
+    }
+    .counter-box {
+        display: block;
+        padding: 30px 20px;
+        text-align: center;
+    }
+    .tech {
+        padding: 5px;
+        text-align: left;
+        height: auto;
+    }
+    .tech .heading {
+        margin: 1rem;
+        margin-top: 2rem;
+    }
+    .techno {
+        width: auto;
+        height: auto;
+        padding: 0rem;
+        margin: 0rem;
+    }
+    .tech .nav-link {
+        padding: .75rem!important;
+    }
+    .tech .tab-content {
+        padding: 0rem;
+        width: 100%;
+    }
+    .techno p {
+        text-align: center;
+    }
+    .techno img {
+        width: 50px;
+        height: 40px;
+        margin: 1rem 1.5rem;
+    }
+    .services-2 {
+        padding: 1rem 0;
+        height: 750px;
+    }
+    .services-2 .heading {
+        padding: .5rem;
+        margin: .5rem;
+    }
+    .services-card .s-img {
+        display: none;
+    }
+    .services-card .items {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .services-card .slick-slide {
+        margin: auto .1rem;
+    }
+    .services-card .small {
+        color: var(--green);
+        text-transform: uppercase;
+        margin-bottom: 0rem;
+    }
+    .services-card .card-body {
+        padding: 1rem;
+    }
+    .services-2 .heading {
+        text-align: center;
+    }
+    .services-2 .heading h1 {
+        font-size: 20px;
+    }
+    .services-2 .heading .right {
+        display: none;
+    }
+    .projects {
+        flex-direction: column;
+        padding: 2rem 1rem;
+    }
+    .project-1 p {
+        padding: 0;
+        font-size: 1rem;
+    }
+    .projects .line {
+        display: none;
+    }
+    .services-2 {
+        display: none;
+    }
+    .footer {
+        padding: 1rem;
+    }
+    .footer .bottom {
+        flex-direction: column;
+    }
+    .footer .media {
+        width: 100%;
+    }
+    .cards-projects,
+    .news,
+    .testimonial,
+    .polygon {
+        display: none;
+    }
+    .footer .dropdown-item {
+        padding: .25rem;
+    }
+    .footer .col-md-3 {
+        margin: .5rem 0;
+    }
 }
